--- a/design/theme/style.less
+++ b/design/theme/style.less
@@ -17,7 +17,7 @@ body{
 	margin: 20px 20px 20px 0;
 }
 .toogle-menu a {
-	background: #f57301 none repeat scroll 0 0;
+	background: #0091EA none repeat scroll 0 0;
 	display: block;
 	height: 33px;
 	left: 0;
@@ -34,7 +34,7 @@ body{
 	width: 23px;
 }
 .top-nav {
-	background: #f57301;
+	background: #0091EA;
 	h2 {
 		color: #fff;
 		font-size: 13px;
@@ -42,11 +42,11 @@ body{
 		padding-top: 10px;
 	}
 	.menu-right {
-		border-right: 1px solid #f79033;
+		border-right: 1px solid #fff;
 		float: left;
 		margin: 0;
 		li {
-			border-left: 1px solid #f79033;
+			border-left: 1px solid #fff;
 			display: inline-block;
 			line-height: 35px;
 			padding: 0 10px;
@@ -61,7 +61,7 @@ body{
 		}
 	}
 	.top-search {
-		border: 1px solid #f79033;
+		border: 1px solid #fff;
 		border-radius: 10px;
 		float: right;
 		height: 25px;
@@ -118,23 +118,23 @@ body{
 					padding: 0 3px;
 					font-weight: bold;
 					&:hover {
-						border-bottom-color: #f57300;
+						border-bottom-color: #0091EA;
 						text-decoration: none;
-						color: #f57300;
+						color: #0091EA;
 					}
 				}
 			}
 			.active {
 				a {
-					border-bottom: 4px solid #f57300;
+					border-bottom: 4px solid #0091EA;
 					text-decoration: none;
-					color:           #f57300;
+					color: #0091EA;
 				}
 			}
 		}
 	}
 	.hot-line {
-		border: 1px dashed #f77402;
+		border: 1px dashed #0091EA;
 		border-radius: 5px;
 		float: right;
 		margin: 10px 0;
@@ -148,7 +148,7 @@ body{
 			padding-left: 50px;
 			span {
 				display: block;
-				color: #f77402;
+				color: #0091EA;
 				font-weight: bold;
 				line-height: 20px;
 				font-size: 23px;
@@ -211,7 +211,7 @@ body{
 					line-height: 45px;
 					position: relative;
 					&:hover {
-						background: #f57301;
+						background: #0091EA;
 						color: #fff;
 						display: block;
 						height: 45px;
@@ -234,7 +234,7 @@ body{
 			}
 			.active {
 				a {
-					background: #f57301;
+					background: #0091EA;
 					color: #fff;
 					display: block;
 					height: 45px;
@@ -319,7 +319,7 @@ body{
 						width: 77px;
 						border-radius: 4px;
 						&:hover {
-							background: #F57301;
+							background: #0091EA;
 							text-decoration: none;
 						}
 					}
@@ -339,7 +339,7 @@ body{
 	position: relative;
 	margin: 0;
 	&::after {
-		border-bottom: 4px solid #f57301;
+		border-bottom: 4px solid #0091EA;
 		bottom: -4px;
 		content: "";
 		height: 4px;
@@ -350,7 +350,7 @@ body{
 }
 .support {
 	h3 {
-		color: #f57301;
+		color: #0091EA;
 		font-size: 14px;
 		font-weight: bold;
 		height: 40px;
@@ -493,7 +493,7 @@ body{
 				letter-spacing: 0.5px;
 				line-height: 22px;
 				a {
-					color: #f57301;
+					color: #0091EA;
 					font-size: 10px;
 					text-transform: uppercase;
 				}
@@ -760,7 +760,7 @@ footer {
 	.footer-bottom {
 		padding: 50px 0 25px 0;
 		.title {
-			color: #f47300;
+			color: #0091EA;
 			font-size: 20px;
 			font-weight: bold;
 			margin: 0;
@@ -793,7 +793,7 @@ footer {
 					width: 190px;
 				}
 				.bnt-register {
-					background: #f57301;
+					background: #0091EA;
 					border: none;
 					border-radius: 2px;
 					color: #fff;
@@ -965,7 +965,7 @@ footer {
 				padding: 10px 0;
 			}
 			a {
-				color: #f57301;
+				color: #0091EA;
 				font-size: 12px;
 				text-transform: uppercase;
 			}
@@ -1029,7 +1029,7 @@ footer {
 	margin-bottom: 80px;
 	.content {
 		h3 {
-			color: #f57301;
+			color: #0091EA;
 			font-size: 14px;
 			font-weight: bold;
 			margin: 30px 0 15px;
@@ -1085,7 +1085,7 @@ footer {
 					}
 					span {
 						color: #fff;
-						background: #f57301;
+						background: #0091EA;
 						height: 25px;
 						line-height: 25px;
 						width: 25px;
@@ -1122,7 +1122,7 @@ footer {
 		}
 		p {
 			background: #e6e6e6 none repeat scroll 0 0;
-			color: #f57301;
+			color: #0091EA;
 			font-size: 12px;
 			font-weight: bold;
 			height: 70px;
@@ -1419,7 +1419,7 @@ footer {
 						background: url("images/icon-tab-active.png") no-repeat top left;
 					}
 					input[type="radio"]:checked + label {
-						color: #fb9026;
+						color: #0091EA;
 					}
 					label {
 						color: #666;
@@ -1459,7 +1459,7 @@ footer {
 							top: 18px;
 						}
 						input {
-							background: #f57301 none repeat scroll 0 0;
+							background: #0091EA none repeat scroll 0 0;
 							border: medium none;
 							border-radius: 5px;
 							color: #fff;
@@ -1524,14 +1524,14 @@ footer {
 }
 .dialog {
 	background: #fff none repeat scroll 0 0;
-	border: 1px solid #f57301 !important;
+	border: 1px solid #0091EA !important;
 	box-shadow: 0 3px 7px -3px #555;
 	padding: 15px 20px;
 	position: absolute;
 	width: 750px;
 	z-index: 9999999;
 	h3.select-title {
-		background: #ff8603 none repeat scroll 0 0;
+		background: #0091EA none repeat scroll 0 0;
 		color: #fff;
 		font-size: 15px;
 		font-weight: bold;
@@ -1555,7 +1555,7 @@ footer {
 		width: 170px;
 		margin-left: 20px;
 		.title {
-			color: #ff8603;
+			color: #0091EA;
 			font-size: 14px;
 			text-transform: uppercase;
 			margin-bottom: 10px;
@@ -1567,7 +1567,7 @@ footer {
 				line-height: 20px;
 				width: 100%;
 				&:hover {
-					background: #ff8603;
+					background: #0091EA;
 					color: #fff;
 					padding-left: 10px;
 					text-decoration: none;
@@ -1582,7 +1582,7 @@ footer {
 		float:       left;
 		margin-left: 20px;
 		.title {
-			color:          #ff8603;
+			color:          #0091EA;
 			font-size:      14px;
 			text-transform: uppercase;
 			margin-bottom:  30px;
@@ -1781,7 +1781,7 @@ footer {
                           width: 140px;
                         }
                         input[type="radio"]:checked + label.label-check-ve {
-                          background: #f57301;
+                          background: #0091EA;
                         }
 					}
 					.chi-tiet > a {
@@ -1799,7 +1799,7 @@ footer {
 				.flight-info-detail {
 					background: #fafafa;
 					h4 {
-						color: #f57301;
+						color: #0091EA;
 						font-size: 12px;
 						font-weight: bold;
 						text-transform: uppercase;
@@ -2787,7 +2787,7 @@ footer {
 /*My styles*/
 .ui-datepicker {
 	background: #fff none repeat scroll 0 0;
-	border: 1px solid #f57301;
+	border: 1px solid #0091EA;
 	border-radius: 0;
 	margin-top: 15px;
 	padding: 10px;
