--- a/design/theme/style.less
+++ b/design/theme/style.less
@@ -894,7 +894,7 @@ footer {
 			ul {
 				margin: 28px 0 0 0;
 				li {
-					border-left: 2px solid #f38539;
+					border-left: 2px solid #0091EA;
 					float: left;
 					line-height: 14px;
 					a {
@@ -905,7 +905,7 @@ footer {
 						text-transform: uppercase;
 						&:hover {
 							text-decoration: none;
-							color: #f38539;
+							color: #0091EA;
 						}
 					}
 					&:first-child {
@@ -918,7 +918,7 @@ footer {
 				.active {
 					a {
 						text-decoration: none;
-						color: #f38539;
+						color: #0091EA;
 					}
 				}
 			}
